! Added feature #1636: SMPT ports are now configurable